some changes in Hero comp

--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="Nehal Ahmed Portfolio" />
+    <link rel="icon" type="image/svg+xml" href="/Nehal_logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nehal Ahmed - Portfolio</title>
-     <link rel="stylesheet" href="./src/index.css" />
+    <meta name="author" content="Nehal Ahmed" />
+    <link rel="stylesheet" href="./src/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+
+    <meta property=" og:title" content="Nehal Ahmed - Full stack Developer" />
+    <meta
+      property="og:description"
+      content="Full Stack Developer specializing in AI Integration and Real-time Applications"
+    />
+    <meta property="og:type" content="website" />
+    <meta proprty="twitter: card" content="summary_large_image" />
   </head>
   <body>
-    
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
